# stat906a3

./: CMakeLists.txt  main.cpp
include/: global.h  matplotlibcpp.h  q2.h  q3.h
